# Computacion-Grafica-Practica

practica7-grupo 9/src/: CMakeLists.txt
practica7-grupo 9/src/01_creation_window/: CMakeLists.txt  main.cpp
practica7-grupo 9/src/02_shader_point/: CMakeLists.txt  main.cpp
practica7-grupo 9/src/03_catch_errors/: CMakeLists.txt  main.cpp
practica7-grupo 9/src/04_shader_file/: CMakeLists.txt  main.cpp
practica7-grupo 9/src/05_triangle/: CMakeLists.txt  main.cpp
practica7-grupo 9/src/06_simple_animation/: CMakeLists.txt  main.cpp  vertShader.glsl
practica7-grupo 9/src/07_point_animation/: CMakeLists.txt  fragShader.glsl  main.cpp  vertShader.glsl
practica7-grupo 9/src/08_isosceles_triangle/: CMakeLists.txt  main.cpp  vertShader.glsl
practica9-grupo9/: _GENERATE_VS2015_x64.bat
practica9-grupo9/src/: CMakeLists.txt
practica9-grupo9/src/4.1_Red_Cube/: CMakeLists.txt  fragShader.glsl  main.cpp  utils.cpp
practica9-grupo9/src/4.1_Red_Cube_1/: CMakeLists.txt  main.cpp  vertShader.glsl
practica9-grupo9/src/4.1_Red_Cube_2/: CMakeLists.txt  main.cpp
practica9-grupo9/src/4.1_Red_Cube_3/: CMakeLists.txt  main.cpp  vertShader.glsl
practica9-grupo9/src/4.2_Instancing_100k_Animated_cubes/: CMakeLists.txt  main.cpp  vertShader.glsl
practica9-grupo9/src/4.2_Instancing_24_Animated_cubes/: CMakeLists.txt  main.cpp  vertShader.glsl
practica9-grupo9/src/4.3_Cube_and_Pyramid/: CMakeLists.txt  main.cpp
practica9-grupo9/src/4.4_Solar_System/: CMakeLists.txt  main.cpp
practica9-grupo9/src/4.5_Solar_system_2nd_planet/: CMakeLists.txt  main.cpp  vertShader.glsl
