#add_subdirectory( 01_creation_window )
#add_subdirectory( 02_shader_point )
#add_subdirectory( 03_catch_errors )
#add_subdirectory( 04_shader_file )
#add_subdirectory( 05_triangle )
#add_subdirectory( 06_simple_animation )
#add_subdirectory( 07_point_animation )
#add_subdirectory( 08_isosceles_triangle )
add_subdirectory(4.1_Red_Cube)
add_subdirectory(4.1_Red_Cube_1)
add_subdirectory(4.1_Red_Cube_2)
add_subdirectory(4.1_Red_Cube_3)
add_subdirectory(4.2_Instancing_24_Animated_cubes)
add_subdirectory(4.2_Instancing_100k_Animated_cubes)
add_subdirectory(4.3_Cube_and_Pyramid)
add_subdirectory(4.4_Solar_System)
add_subdirectory(4.5_Solar_system_2nd_planet)
